# azure_docintelligence_app

./: .gitignore  Makefile  pyproject.toml  streamlit_app.py  test_table_export.py
visionviews/: userjourney_release1.md
