[project]
name = "azure-docintelligence-app"
version = "0.1.0"
description = "Streamlit-app för att läsa PDF med Azure Document Intelligence"
authors = [{name = "Mattias", email = "mattias@example.com"}]
dependencies = [
    "streamlit",
    "python-dotenv",
    "azure-ai-formrecognizer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
